--- a/Judini_2.1/localisation/Judini.csv
+++ b/Judini_2.1/localisation/Judini.csv
@@ -15,3 +15,5 @@ bono_stonks;Accelerated Growth;;;;;;;;;;;;;
 bono_stonks_desc;Pops, pops and pops!;;;;;;;;;;;;;
 paises_bajos;Netherlands Buff;;;;;;;;;;;;;
 paises_bajos_desc;Growth and Education!;;;;;;;;;;;;;
+procaim_the_COP_title;Seikanron Debate;;;;;;;;;;;;;x
+procaim_the_COP_desc;Korea should recognize the legitimacy of the Emperor Meiji and it's place under the Land of the Rising Sun!;;;;;;;;;;;;;x
