--- a/Concertum_1.0/localisation/Judini.csv
+++ b/Concertum_1.0/localisation/Judini.csv
@@ -17,3 +17,9 @@ paises_bajos;Netherlands Buff;;;;;;;;;;;;;
 paises_bajos_desc;Growth and Education!;;;;;;;;;;;;;
 procaim_the_COP_title;Seikanron Debate;;;;;;;;;;;;;x
 procaim_the_COP_desc;Korea should recognize the legitimacy of the Emperor Meiji and it's place under the Land of the Rising Sun!;;;;;;;;;;;;;x
+unificacion_cultural_title;South American Cultural Unification;;;;;;;;;;;;;x
+unificacion_cultural_desc;We have blurred the borders and conquered the vast expanse of South America, and now it's time to unite the people!;;;;;;;;;;;;;x
+create_supply_depot_title;Create Supply Depot;;;;;;;;;;;;;x
+create_supply_depot_desc;Establish a Supply Depot in our capital;;;;;;;;;;;;;x
+dismantle_supply_depot_title;Dismantle Supply Depot;;;;;;;;;;;;;x
+dismantle_supply_depot_desc;Destroy the Depot!;;;;;;;;;;;;;x
